--- a/source/_posts/波尔登森林公园一游.md
+++ b/source/_posts/波尔登森林公园一游.md
@@ -2,6 +2,10 @@
 title: 波尔登森林公园一游
 date: 2022-10-04 10:38:50
 tags:
+{%  image
+    url="https://qiansen.oss-cn-hangzhou.aliyuncs.com/1.jpg"
+    title=""
+%}
 ---
 
 # 波尔登森林公园一游（信阳市）
