--- a/source/_posts/波尔登森林公园一游.md
+++ b/source/_posts/波尔登森林公园一游.md
@@ -2,7 +2,7 @@
 title: 波尔登森林公园一游
 date: 2022-10-04 10:38:50
 tags:
-
+cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/9.jpg
 ---
 
 # 波尔登森林公园一游（信阳市）
@@ -13,19 +13,13 @@ tags:
 
 ###  准备
 
-![高德地图](https://qiansen.oss-cn-hangzhou.aliyuncs.com/Screenshot_2022-10-02-12-49-14-96_ca6ee20236ea15a.jpg)中午2点出发，本想睡会觉，但是某人的对象说要2.所以我们只好不睡午觉，一起去。从学校大门口坐公交，然后中途在一个站牌转车，一路直奔波尔登。司机师傅开的巨快，我看窗户外面的山都是在飞速的后移，只能说不愧是大巴车司机。一路上有很多山，没想到我们坐的线路上景点还挺多。来信阳上学2年半了，居然连信阳景点都不知道，这可恶的疫情，希望能早日结束。
-
-
+![公园路线](https://qiansen.oss-cn-hangzhou.aliyuncs.com/%E5%85%AC%E5%9B%AD%E8%B7%AF%E7%BA%BF.jpg)中午2点出发，本想睡会觉，但是某人的对象说要2.所以我们只好不睡午觉，一起去。从学校大门口坐公交，然后中途在一个站牌转车，一路直奔波尔登。司机师傅开的巨快，我看窗户外面的山都是在飞速的后移，只能说不愧是大巴车司机。一路上有很多山，没想到我们坐的线路上景点还挺多。来信阳上学2年半了，居然连信阳景点都不知道，这可恶的疫情，希望能早日结束。
 
 ### 路上
 
-
-
-差不多3.到地儿，一个多小时，估计是景区专门开的线路。到地之后发现对面有座大山，我们还以为是鸡公山，结果一看指示牌，距鸡公山景区入口6.5km。人都要麻了。我们在路边下了车，先在路边小店买了几瓶水，水上还标有鸡公山饮用矿泉水，喝了这水，我们也算是去过鸡公山了。沿着山路走了一段，才到景区入口，全价票45，不过我们都带有学生证，所以是半价票22。嘿嘿，还是当学生好。准备进景区了。然后遇见了我们大一的班代，打了招呼（这人是真社牛），哥们要尴尬死了。不仅和我们说了游览攻略，还给我们加油打气，说争取2个小时看完下来，我们当时没想着要爬山，结果他说要爬上去，寄！![景区游览图](youlan)
+差不多3.到地儿，一个多小时，估计是景区专门开的线路。到地之后发现对面有座大山，我们还以为是鸡公山，结果一看指示牌，距鸡公山景区入口6.5km。人都要麻了。我们在路边下了车，先在路边小店买了几瓶水，水上还标有鸡公山饮用矿泉水，喝了这水，我们也算是去过鸡公山了。沿着山路走了一段，才到景区入口，全价票45，不过我们都带有学生证，所以是半价票22。嘿嘿，还是当学生好。准备进景区了。然后遇见了我们大一的班代，打了招呼（这人是真社牛），哥们要尴尬死了。不仅和我们说了游览攻略，还给我们加油打气，说争取2个小时看完下来，我们当时没想着要爬山，结果他说要爬上去，寄！![景区游览图](https://qiansen.oss-cn-hangzhou.aliyuncs.com/%E6%99%AF%E5%8C%BA%E6%B8%B8%E8%A7%88%E5%9B%BE.jpg)
 
 ### 进园区
-
-
 
 进去后先看了一堆红色树叶的树，我觉得很新奇，说实话以前确实没见过红色树叶的树，看了看人家指示牌，知道了这种树叫做落羽杉。![落羽杉](https://qiansen.oss-cn-hangzhou.aliyuncs.com/%E8%90%BD%E7%BE%BD%E6%9D%89.jpg)然后看了看韩安纪念馆和碑，据说是韩安先生一手创造的这片森林，以此纪念。![韩安纪念碑](https://qiansen.oss-cn-hangzhou.aliyuncs.com/%E9%9F%A9%E5%AE%89%E7%BA%AA%E5%BF%B5%E7%A2%91.jpg)然后我们看了看古茗溪，可惜最近河南几个月天都很旱，溪水已经都蒸发了，是真正清澈见底了。好在上面还有一个湖，虽然水位下降的很多很多，湖里树的树根都已经裸露出来了，树根上的水草暗示了之前湖里水还是很多的，可惜。一路上某人对象和她室友嘎嘎拍照，还说要一起拍合照，和女孩子拍照，我很尴尬，不要说我性别歧视，我是真不太擅长和女孩子打交道。
 看完湖后就没有什么东西了，所以我们直接从这走大道返回，下山。路上碰到一对带孩子的夫妻，三个人一人一根树枝，走路嘎嘎扭，看起来很精神，我要笑死了，真是有活力啊。
