--- a/source/_posts/青春的悸动.md
+++ b/source/_posts/青春的悸动.md
@@ -2,7 +2,7 @@
 title: 青春的悸动
 date: 2022-10-10 14:39:24
 tags:
-cover: 
+cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/16.jpg
 ---
 
 今天在氵群时偶然看到群友们发的一个网站，说是好康的东西，怀着一颗好奇心，我点开了那个网站。
