--- a/source/_posts/灵活排位日记.md
+++ b/source/_posts/灵活排位日记.md
@@ -15,5 +15,8 @@ cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/1.jpg
 
 ![10.8排位](https://qiansen.oss-cn-hangzhou.aliyuncs.com/10.8%E6%8E%92%E4%BD%8D.png)
 
-## 10.9
+## 10.13
 
+没有家族和宗门的帮助，多少天才卡在黄金境界含恨而终。诸位道友，今吾聚天地灵气，打破自身桎梏，领悟剑之法则，挣脱枷锁，终入铂金之境。( 什么叫Fiora king啊 )
+
+![10.13排位](https://qiansen.oss-cn-hangzhou.aliyuncs.com/10.13%E6%8E%92%E4%BD%8D.png)
