--- a/source/_posts/青梅竹马，两小无猜.md
+++ b/source/_posts/青梅竹马，两小无猜.md
@@ -2,6 +2,7 @@
 title: 青梅竹马，两小无猜
 date: 2022-10-10 14:39:24
 tags: 有感而发
+category: 有感而发
 cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/16.jpg
 ---
 
