--- a/source/_posts/波尔登森林公园一游.md
+++ b/source/_posts/波尔登森林公园一游.md
@@ -2,6 +2,7 @@
 title: 波尔登森林公园一游
 date: 2022-10-04 10:38:50
 tags: 日常
+category: 日常
 cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/9.jpg
 ---
 
