--- a/source/_posts/我的日常.md
+++ b/source/_posts/我的日常.md
@@ -2,13 +2,11 @@
 title: 记录美好生活
 date: 2022-10-14 23:27:21
 tags: 日常
-cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/.png
+cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/记录美好生活.png
 category: 日常
 ---
 
-### 10.16
 
-今天帮朋友上分，灵活上白银了，本来今天没啥手感，打的巨菜，结果对面更菜，就赢了。今天好累，不知道为什么，感觉干了很多事情。很充实但疲惫。
 
 ### 10.15
 
