--- a/source/_posts/番剧推荐.md
+++ b/source/_posts/番剧推荐.md
@@ -3,5 +3,55 @@ title: 番剧推荐
 date: 2022-10-15 15:42:12
 tags: 二次元
 category: 二次元
-cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/幼(1).jpg
+cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/番剧推荐.jpg
 ---
+
+## 纯爱篇
+
+----
+
+### 月色真美（纯爱天下第一！）
+
+![月色真美](https://qiansen.oss-cn-hangzhou.aliyuncs.com/%E6%9C%88%E8%89%B2%E7%9C%9F%E7%BE%8E.png)
+
+“不管你我相距多远，我都想告诉你 我对你的心意不会变，给即将去到陌生城市的你 ，我永远喜欢你。”
+
+ 																																																		——安昙小太郎
+
+阿B评分9.8，我比较推荐去阿B看，1080P高码率谁用谁知道，不过不推荐充大会员，有的话最好，没有可以去资源网站看，我是嫖的朋友的，嘿嘿≖‿≖✧
+
+男主和女主从初三刚入学的互相不认识到最后结婚生子，长跑多年青涩又懵懂的爱情，甚至还异地，一开始我以为他俩异地要寄，结果没想到更甜了，齁甜。二次元赛高！（真是太棒了！） (●′ω`●)
+
+### 龙与虎
+
+![龙与虎](https://qiansen.oss-cn-hangzhou.aliyuncs.com/%E9%BE%99%E4%B8%8E%E8%99%8E.jpg)
+
+“我是龙，你是虎，虎和龙，自古以来就决定了并立在一起，就算你现在不在我身边，我也会超越距离跟时间，一直在你身边。”
+
+​																																																				——高须龙儿                                                                                                      
+
+阿B评分9.7，这个我也是在阿B看的，高画质太香了，听朋友说是纯爱且好看，所以我兴冲冲地点开，前期看的胃疼，女主喜欢男二，男主疯狂当僚机，后来女主发觉自己喜欢的是男主，结果给男主当僚机追女二，我还以为被骗了，结果往后巨甜。强推！
+
+### 四月是你的谎言
+
+
+
+### 玉子市场 and 玉子爱情故事
+
+
+
+## 胃疼篇
+
+----
+
+### 人渣的本愿
+
+
+
+### 家有女友
+
+
+
+## 其他篇
+
+### 寄生兽
