--- a/source/_posts/青梅竹马，两小无猜.md
+++ b/source/_posts/青梅竹马，两小无猜.md
@@ -3,7 +3,7 @@ title: 青梅竹马，两小无猜
 date: 2022-10-10 14:39:24
 tags: 有感而发
 category: 有感而发
-cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/16.jpg
+cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/青梅竹马，两小无猜.jpg
 ---
 
 今天在氵群时偶然看到群友们发的一个网站，说是好康的东西，怀着一颗好奇心，我点开了那个网站。
