--- a/source/_posts/我的日常.md
+++ b/source/_posts/我的日常.md
@@ -1,20 +1,18 @@
 ---
-title: 记录美好生活
+title: 我的日常
 date: 2022-10-14 23:27:21
 tags: 日常
-cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/记录美好生活.png
+cover: https://qiansen.oss-cn-hangzhou.aliyuncs.com/我的日常.png
 category: 日常
 ---
 
 
 
-### 10.15
 
-今天上午把原神任务肝了亿下，刷了圣遗物副本，结果差强人意，我的妮露圣遗物还差一点就完美了，岂可修！mhy坏事做尽，搞什么圣遗物，就不能简单点。下午睡醒背了每日20个单词，做了leetcode今天的每日一题，今天自己写出来了，很舒服。晚上和朋友打了一晚上无限火力,自己玩肉嘎嘎赢，一想快乐玩剑姬就嘎嘎输，怪事，不过肉剑姬是真的快乐，就是前期太弱了，明天再试试。打到晚上宿舍断电，深渊也没空摸了，只好找朋友邦邦，在此处感谢我的好朋友，gzx，阿里嘎多~  又是充实的一天呢！
 
 ### 10.14
 
-今天原神卡池更新，本来想把我的角色大保底留给小草神纳西妲，但是！ 妮露太好看了啊！老婆！哼哼哼~哼哼哼~啊啊啊！所以我就抽了，顺带抽了武器，但是武器歪掉了。岂可修！可恶的mhy！ 这一定是mhy干的！乆乆乆.jpg  这更加坚定了我要进mhy的决心。打入mhy内部，用工资氪金，相当于我赚mhy的钱。 妮露是真的好看！她真的很会跳舞，不然怎么会跳舞跳到我心里了。
+今天原神卡池更新，本来想把我的角色大保底留给小草神纳西妲，但是！ 妮露太好看了啊！老婆！哼哼哼~哼哼哼~啊啊啊！所以我就抽了，顺带抽了武器，但是武器歪掉了。岂可修！可恶的mhy！ 这一定是mhy干的！乆乆乆.jpg  这更加坚定了我要进mhy的决心。打入mhy内部，用工资氪金，相当于我赚mhy的钱。 妮露是真的好看！
 
 ![抽妮露](https://qiansen.oss-cn-hangzhou.aliyuncs.com/%E6%8A%BD%E5%A6%AE%E9%9C%B2.jpg)
 
