--- a/source/_posts/图片.md
+++ b/source/_posts/图片.md
@@ -1,5 +1,7 @@
 ---
 title: 图片
 date: 2022-11-23 13:32:08
-tags:![标签图片1](C:\Users\张峻豪\Desktop\标签图片1.jpg)
+tags: 爱好
 ---
+
+a![标签图片1](C:\Users\张峻豪\Desktop\标签图片1.jpg)
