--- a/source/_posts/图片.md
+++ b/source/_posts/图片.md
@@ -2,6 +2,7 @@
 title: 图片
 date: 2022-11-23 13:32:08
 tags: 爱好
+cover: https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg
 ---
 
-a![标签图片1](C:\Users\张峻豪\Desktop\标签图片1.jpg)
+![图片](https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg)
