--- a/source/_posts/收藏.md
+++ b/source/_posts/收藏.md
@@ -2,7 +2,8 @@
 title: 图片
 date: 2022-11-23 13:32:08
 tags: 爱好
-cover: https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg
+cover: https://boke-file2.oss-cn-
+hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg
 ---
 
 ![图片](https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg)
@@ -18,3 +19,7 @@ cover: https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%
 ![bx4](https://boke-file2.oss-cn-hangzhou.aliyuncs.com/bx4.jpeg)
 
 ![bx7](https://boke-file2.oss-cn-hangzhou.aliyuncs.com/bx7.jpg)
+
+
+
+<audio src="D:\CloudMusic\Reynard Silva - The Way I Still Love You.mp3"></audio>
