--- a/source/_posts/收藏.md
+++ b/source/_posts/收藏.md
@@ -1,7 +1,7 @@
 ---
 title: 图片
 date: 2022-11-23 13:32:08
-tags: 爱好
+tags: Crush
 cover: https://boke-file2.oss-cn-
 hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg
 ---
@@ -19,5 +19,3 @@ hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg
 ![bx4](https://boke-file2.oss-cn-hangzhou.aliyuncs.com/bx4.jpeg)
 
 ![bx7](https://boke-file2.oss-cn-hangzhou.aliyuncs.com/bx7.jpg)
-
-
