--- a/source/_posts/珍藏.md
+++ b/source/_posts/珍藏.md
@@ -1,5 +1,5 @@
 ---
-title: crush
+title: 珍藏
 date: 2022-11-25 18:42:05
 tags: 收藏
 cover: https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E6%A0%87%E7%AD%BE%E5%9B%BE%E7%89%871.jpg
